FIX File List Layout Issues

--- a/client/src/app/ui/modules/file-list/components/file-list/file-list.component.scss
+++ b/client/src/app/ui/modules/file-list/components/file-list/file-list.component.scss
@@ -92,6 +92,7 @@ $navbar-size: 40px;
 
 .detail-link {
     os-icon-container {
-        flex-direction: row-reverse;
+        width: fit-content;
+        margin-left: auto;
     }
 }
